--- a/src/app/components/pages/user/membership/subscription/subscription.component.html
+++ b/src/app/components/pages/user/membership/subscription/subscription.component.html
@@ -1,5 +1,92 @@
 <div class="body">
-    <div class="p-col-2">
+  <div class="card">
+    <div class="card-header">
+      <div class="title">
+        <span>Subscription Information</span>
+      </div>
+
+      <div class="member-status">
+        <span>CA19144</span>
+        <!-- <span>Status:</span> -->
+        <span>UNPAID</span>
+      </div>
+    </div>
+
+    <div class="card-body">
+      <div class="p-grid p-justify-center">
+        <div class="p-col-8 text-0">
+          <span>
+            Username
+          </span>
+        </div>
+        <div class="p-col-4 text-1">
+          <span>
+            th3ygen
+          </span>
+        </div>
+      </div>
+
+      <hr>
+      <div class="p-grid p-justify-center">
+        <div class="p-col-8 text-0">
+          <span>
+            Member Level
+          </span>
+        </div>
+        <div class="p-col-4 text-1">
+          <span>
+            Regular
+          </span>
+        </div>
+      </div>
+
+      <hr>
+      <div class="p-grid p-justify-center">
+        <div class="p-col-8 text-0">
+          <span>
+            Paid amount
+          </span>
+        </div>
+        <div class="p-col-4 text-1">
+          <span>
+            RM0.00
+          </span>
+        </div>
+      </div>
+
+      <hr>
+      <div class="p-grid p-justify-center">
+        <div class="p-col-8 text-0">
+          <span>
+            Total amount
+          </span>
+        </div>
+        <div class="p-col-4 text-1">
+          <span>
+            RM50.00
+          </span>
+        </div>
+      </div>
+
+      <hr>
+      <div class="p-grid p-justify-center">
+        <div class="p-col-8 text-0">
+          <span>
+            Member since
+          </span>
+        </div>
+        <div class="p-col-4 text-1">
+          <span>
+            3/1/1999
+          </span>
+        </div>
+      </div>
+
+      <hr>
+    </div>
+  </div>
+  
+    <!-- <div class="p-col-2">
     
     </div>
     <div class="p-col-8">
@@ -18,5 +105,5 @@
 
     </div>
     <div class="p-col-2">
-    </div>
+    </div> -->
 </div>
