--- a/src/app/components/pages/user/profile/password/password.component.html
+++ b/src/app/components/pages/user/profile/password/password.component.html
@@ -7,27 +7,33 @@
       <div class="title">
         <span> Password</span>
       </div> 
-      Current Password
+      <span class="text-0">Current Password</span>
       <div class="p-col-6 fi-col">
-        <input type="text" pInputText />
+        <input type="password" pInputText />
       </div>
       <hr>
-      <div class="sub-title">Changing your password will automatically sign out of all your
-      devices.
-      You will need to enter your new password on all your devices
-    </div>
-      <hr>
-      New Password
-      <div class="p-col-6 fi-col">
-        <input type="text" pInputText />
+      <div class="sub-title">
+          Changing your password will automatically sign out of all your
+          devices. You will need to enter your new password on all your devices
       </div>
       <hr>
-      Confirm Password
+      <span class="text-0">New Password</span>
       <div class="p-col-6 fi-col">
-        <input type="text" pInputText />
+        <input type="password" pInputText />
       </div>
-    </div>
-    <div class="p-col-2">
+      <hr>
+      <span class="text-0">Repeat Password</span>
+      <div class="p-col-6 fi-col">
+        <input type="password" pInputText />
+      </div>
+
+      <div class="p-col-12" style="text-align: center;">
         <button pButton type="button" label="Change Password" class="ui-button-raised ui-button-warning"></button>
+      </div>
     </div>
-</div>
+    <div class="p-col-2 changepass">
+        
+    </div>
+</div> 
+
+
