--- a/src/app/components/sections/footer/footer.component.html
+++ b/src/app/components/sections/footer/footer.component.html
@@ -33,8 +33,10 @@
             </ul> 
             
         </div>
-    
         <div class="contacts">
+            <!-- <div class="logo">
+                <img src="http://localhost:4200/assets/myras-logo.png">
+            </div> -->
             <div class="header">
                 <span>Follow us</span>
             </div>
@@ -57,13 +59,13 @@
 <div class="others">
     <div class="items">
         <div>
-            <span>Label</span>
+            <span>Contact</span>
         </div>
         <div>
-            <span>Label</span>
+            <span>Feedback</span>
         </div>
         <div>
-            <span>Label</span>
+            <span>Privacy Policy</span>
         </div>
     </div>
     
