--- a/src/app/components/forms/register/register.component.scss
+++ b/src/app/components/forms/register/register.component.scss
@@ -1,3 +1,5 @@
+@import '../../../theme/colors.scss';
+
 .wrapper {
     position: fixed;
     top: 0;
@@ -125,6 +127,11 @@
     opacity: 1;
 
     animation: glow 1.5s infinite ease-in-out;
+
+    &.disabled {
+      animation: none;
+      pointer-events: none;
+    }
 }
 
 .proceed {
@@ -157,6 +164,15 @@
         opacity: 1;
 
         cursor: pointer;
+    }
+
+    &.disabled {
+      animation: none;
+      pointer-events: none;
+
+      &:hover {
+        cursor: normal;
+      }
     }
 }
 
@@ -290,7 +306,7 @@
     height: fit-content;
 
     background-color:#efeff2;
-    opacity: 100%;
+    opacity: 1;
 
     box-shadow: 0 0px 20px 5px rgba(#d6d6d6, 0);
     /* border-radius: 15px; */
@@ -365,7 +381,7 @@
       & > .features {
         position: relative;
 
-        height: fit-content;
+        height: 700px;
         width: 80%;
 
         margin-left: auto;
@@ -409,7 +425,7 @@
         line-height: 200px;
 
         text-align: center;
-        letter-spacing: 2px;
+        /* letter-spacing: 2px; */
 
         & > span {
           display: inline-block;
@@ -418,6 +434,7 @@
 
           &:nth-child(1) {
             font-size: 50px;
+            padding-right: 10px;
           }
           &:nth-child(2) {
             font-size: 18px;
@@ -438,7 +455,7 @@
         text-align: center;
         font-size: 18px;
 
-        letter-spacing: 3px;
+        letter-spacing: 1px;
         color: white;
 
         background-color: rgba(0, 0, 0, .1);
@@ -464,5 +481,135 @@
     }
 
 
+  }
+}
+
+.input-txt-1 {
+  width: 100%;
+}
+
+.form-header {
+  position: relative;
+  height: 100px;
+  width: 100%;
+
+  text-align: center;
+  line-height: 100px;
+
+  font-size: 20px;
+
+  user-select: none;
+}
+
+.header {
+  height: 100px;
+  width: 100%;
+
+  font-size: 30px;
+  text-align: center;
+  line-height: 100px;
+
+  user-select: none;
+}
+
+.msgbox-success {
+  position: relative;
+
+  height: fit-content;
+  width: 100%;
+
+  padding: 20px 50px;
+
+  background-color: orange;
+
+  & > .body {
+    position: relative;
+    
+    width: 100%;
+    height: fit-content;
+
+    font-size: 18px;
+    text-align: center;
+    padding: 10px 0;
+
+    & > span {
+      display: block;
+    }
+
+    & > .username {
+      color: white;
+      font-weight: bold;
+    }
+    & > .fee {
+      color: white;
+      font-weight: bold;
+    }
+  }
+}
+
+.info-cards {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-around;
+
+  position: relative;
+  height: fit-content;
+  width: 100%;
+
+  & > .card {
+    position: relative;
+
+    height: fit-content;
+    width: 500px;
+
+    padding: 20px 50px;
+
+    background-color: $color-bg-light;
+    border-radius: 3px;
+    box-shadow: 0px 4px 5px 1px rgba(0, 0, 0, .3);
+
+    transition: .3s all;
+    &:hover {
+        transform: translateY(-5px);
+        box-shadow: 0px 7px 8px 1px rgba(0, 0, 0, .2);
+    }
+
+    & > .card-header {
+      position: relative;
+      width: 100%;
+      height: 80px;
+
+      text-align: center;
+      line-height: 80px;
+
+      font-weight: bold;
+      font-size: 18px;
+
+      user-select: none;
+    }
+
+    & > .card-body {
+      position: relative;
+      height: fit-content;
+      width: 100%;
+
+      & span {
+        display: block;
+      }
+
+      & > div {
+        width: 100%;
+        height:fit-content;
+
+        &:nth-child(1) {
+          font-size: 16px;
+          color: rgba(0, 0, 0, .6);
+        }
+        &:nth-child(2) {
+          font-size: 16px;
+          padding: 10px 30px;
+        }
+      }
+    }
   }
 }
