--- a/src/app/components/pages/about/about.component.scss
+++ b/src/app/components/pages/about/about.component.scss
@@ -1,7 +1,9 @@
+@import '../../../theme/colors.scss';
+
 .page-header {
     position: relative;
 
-    height: 60vh;
+    height: 100vh;
     width: 100%;
 
     background-color: rgb(15, 37, 87);
@@ -9,13 +11,275 @@
     padding-top: 100px; // topnav is 100px height
 }
 
+.section {
+    position: relative;
+  
+    min-height: 100vh;
+    height: fit-content;
+    width: 100%;
+  
+    & > .section-header {
+      position: relative;
+  
+      width: 100%;
+      height: 150px;
+  
+      font-size: 40px;
+  
+      line-height: 150px;
+  
+      text-align: center;
+
+      user-select: none;
+    }
+  
+    & > .section-body {
+      position: relative;
+  
+      height: calc(100% - 150px);
+      width: 100%;
+  
+      & > .intro-item {
+        align-items: center;
+            
+      }
+    }
+
+    &.s1 {
+        & > .section-body {
+            & > .intro-item {
+                padding-left: 12%;
+                padding-right: 12%;
+                padding-bottom: 100px;
+
+                & > .vision-text {
+                    text-align: center;
+                    & > span {
+                        display: block;
+
+                        padding-bottom: 30px;
+                        
+                        font-size: 20px;
+
+                        &:nth-child(1) {
+                            font-size: 35px;
+                            text-transform: uppercase;
+                        }
+                    }
+                }
+            }
+        }
+
+        padding-bottom: 50px;
+    }
+    
+    &.s2 {
+        background-color: orange;
+
+        & > .section-body {
+            padding-left: 12%;
+            padding-right: 12%;
+
+
+            & .team-avatar {
+                position: relative;
+
+                margin-left: auto;
+                margin-right: auto;
+
+                margin-bottom: 15px;
+  
+                height: 150px;
+                width: 150px;
+
+            }
+
+            & .team-details {
+                text-align: center;
+
+                & > .team-name {
+                    font-size: 15px;
+                }
+                & > .team-title {
+                    color: rgba(0, 0, 0, 1);
+                    font-size: 18px;
+                    font-weight: bold;
+
+                    margin-bottom: 10px;
+                }
+                & > .team-contact {
+                    width: 100px;
+
+                    margin-left: auto;
+                    margin-right: auto;
+
+                    font-size: 15px;
+                    font-weight: bold;
+
+                    & i {
+                        font-size: 20px;
+                        color: rgba(0, 0, 0, 0.699);
+                        transition: .3s all;
+                        &:hover {
+                            cursor: pointer;
+                            transform: translateY(-5px);
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    &.s3 {
+        & > .section-header {
+            height: 250px;
+            line-height: 350px;
+        }
+
+        & > .section-body {
+            padding-left: 12%;
+            padding-right: 12%;
+            
+            height: calc(100% - 250px);
+            & > .body-start-text {
+                text-align: center;
+
+                font-size: 22px;
+                font-weight: bold;
+                color: orange;
+
+                margin-bottom: 50px;
+
+                & > span {
+                    display: block;
+                }
+            }
+
+            & .contact-card {
+                position: relative;
+
+                /* height: fit-content; */
+
+                background-color: white;
+
+                box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3);
+                border-radius: 5px;
+
+                margin-left: 15px;
+                margin-right: 15px;
+
+                transition: .3s all;
+                &:hover {
+                    transform: translateY(-5px);
+                    box-shadow: 0px 7px 8px 1px rgba(0, 0, 0, .2);
+                }
+
+                & > .card-header {
+                    position: relative;
+
+                    height: fit-content;
+                    width: 100%;
+
+                    padding: 15px 15px;
+
+                    color: rgba(0, 0, 0, 0.582);
+                }
+
+                & > .card-body {
+                    font-size: 15px;
+
+                    padding: 0 15px;
+
+                    & > span {
+                        display: block;
+                        padding-bottom: 5px;
+                    }
+
+                    &.social-items {
+                        padding: 20px 60px;
+
+                    }
+
+                    & .social-item {
+                        height: 100%;
+
+                        padding-bottom: 15px;
+
+                        & > span {
+                            display: inline-block;
+                            padding-left: 20px;
+                        }
+
+                        
+                        &:hover {
+                            cursor: pointer;
+
+                            & > .fb {
+                                color: blue;
+                            }
+                            & > .ig {
+                                color: rgb(201, 33, 75);
+                            }
+                            & > .tw {
+                                color: rgb(6, 191, 216);
+                            }
+                        }
+                    }
+
+                    & i {
+                        font-size: 30px;
+                        transition: .3s all;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.poly-0 {
+    position: absolute;
+    top: -1px;
+    left: 0; 
+  
+    width: 100%;
+    height: 150px;
+  
+    background-color: orange;
+  
+    clip-path: polygon(0 0, 0% 100%, 100% 0);
+  }
+.poly-1 {
+    position: absolute;
+    bottom: -1px;
+    left: 0; 
+  
+    width: 100%;
+    height: 150px;
+  
+    background-color: orange;
+  
+    clip-path: polygon(0 85%, 100% 0, 100% 100%, 0% 100%);
+  }
+
+.svg {
+    position: relative;
+  
+    height: 300px;
+    width: 500px;
+  
+    /* background: url('http://localhost:4200/assets/svg/undraw_stand_out_1oag.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain; */
+  }
+
 .body {
     position: relative;
 
     min-height: 100vh;
     width: 100%;
 
-    background-color: #E4EBF5;
+    background-color: $color-bg-light;
 
     & > .vision-wrapper {
         position: relative;
@@ -23,7 +287,7 @@
         width: 100%;
         height: 80vh;
 
-        background-color: rgb(233, 211, 150);
+        background-color: $color-bg-light;
 
         & > .text-card {
             position: absolute;
