--- a/src/app/components/pages/activities/activities.component.html
+++ b/src/app/components/pages/activities/activities.component.html
@@ -2,4 +2,106 @@
     <app-section-page-header></app-section-page-header>
 </div>
 
-<div class="body"></div>
+<div class="main-body">
+    <div class="cluster">
+        <div class="cluster-nav">
+            <div class="cluster-nav-item" *ngFor="let item of ['Industry', 'Academian', 'Government', 'Public']; let x = index" [class.active]="this.clusterIndex === x" (click)="this.clusterIndex = x">
+                <span>{{ item }}</span>
+            </div>
+        </div>
+
+        <div class="cluster-content">
+            <div class="header">
+                <span>Industry</span>
+            </div>
+
+            <div class="body">
+                
+                <div class="header">
+                    <div class="header-line"></div>
+                    <div class="header-label">
+                        <span>Events</span>
+                    </div>
+                    
+                </div>
+
+                <div class="content">
+                    <p-carousel [value]="this.events" [numVisible]="2" [numScroll]="1">
+                        <ng-template let-event pTemplate="item">
+                            <div class="act-card">
+                                <div class="header">
+                                    <span>{{ event.title }}</span>
+                                </div>
+
+                                <div class="img"></div>
+
+                                <div class="brief">
+                                    <span>{{ event.brief }}</span>
+                                </div>
+                            </div>
+                        </ng-template>
+                    </p-carousel>
+                </div>
+                
+                <div class="header">
+                    <div class="header-line"></div>
+                    <div class="header-label">
+                        <span>Robotic Competitions</span>
+                    </div>
+                    
+                </div>
+
+                <div class="content">
+                    <p-carousel [value]="this.comps" [numVisible]="3" [numScroll]="1">
+                        <ng-template let-comp pTemplate="item">
+                            <div class="act-card">
+                                <div class="header">
+                                    <span>{{ comp.title }}</span>
+                                </div>
+
+                                <div class="img"></div>
+
+                                <div class="brief">
+                                    <span>{{ comp.brief }}</span>
+                                </div>
+                            </div>
+                        </ng-template>
+                    </p-carousel>
+                </div>
+                
+                <div class="header">
+                    <div class="header-line"></div>
+                    <div class="header-label">
+                        <span>Event Calendar</span>
+                    </div>
+                    
+                </div>
+
+                <div class="content">
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section">
+        <div class="section-header">
+            
+        </div>
+    </div>
+    <!-- <div class="section">
+        <div class="section-header">
+            Academian
+        </div>
+    </div>
+    <div class="section">
+        <div class="section-header">
+            Government
+        </div>
+    </div>
+    <div class="section">
+        <div class="section-header">
+            Public
+        </div>
+    </div> -->
+
+</div>
