--- a/src/app/components/pages/activities/activities.component.scss
+++ b/src/app/components/pages/activities/activities.component.scss
@@ -1,7 +1,9 @@
+@import '../../../theme/colors.scss';
+
 .page-header {
     position: relative;
 
-    height: 60vh;
+    height: 100vh;
     width: 100%;
 
     background-color: rgb(15, 37, 87);
@@ -10,11 +12,299 @@
 }
 
 
-.body {
+.main-body {
     position: relative;
 
     min-height: 100vh;
     width: 100%;
 
-    background-color: #E4EBF5;
+    background-color: $color-bg-light;
+}
+
+.section {
+    position: relative;
+
+    height: fit-content;
+    width: 100%;
+
+    background-color: $color-bg-light;
+
+    &.t {
+        height: 100vh;
+    }
+
+    & > .section-header {
+        position: relative;
+
+        padding-left: 12%;
+        padding-right: 12%;
+
+        height: 150px;
+        width: 100%;
+
+        line-height: 150px;
+        text-align: left;
+
+        font-size: 40px;
+    }
+
+    & > .section-body {
+        position: relative;
+
+        height: fit-content;
+        width: 100%;
+    }
+
+    & > .section-brief {
+
+    }
+
+    &.s1 {
+        margin-top: 100px;
+        & > .section-header {
+            padding: 0;
+            height: 85px;
+            line-height: 85px;
+            background-color: orange;
+
+            width: 400px;
+
+            text-align: center;
+        }
+        & > .section-header-t {
+            position: absolute;
+            left: 399px;
+            top: 0;
+
+            height: 100px;
+            width: 130px;
+
+            background-color: orange;
+
+            clip-path: polygon(0 0, 0% 100%, 100% 100%);
+
+        }
+    }
+}
+
+.cluster {
+    margin-top: 50px;
+    position: relative;
+
+    height: fit-content;
+    width: 100%;
+
+    & > .cluster-nav {
+        display: flex;
+        justify-content: space-around;
+
+        position: relative;
+        /* top: 50%;
+        left: 0;
+        transform: translateY(-50%); */
+
+        height: 80px;
+        width: 100%;
+
+        & > .cluster-nav-item {
+            position: relative;
+
+            width: 200px;
+            height: 100%;
+
+            background-color: white;
+            color: black;
+
+            text-align: center;
+            line-height: 80px;
+
+            border: 1px solid orange;
+            border-bottom: 0px;
+            border-top-left-radius: 3px;
+            border-top-right-radius: 3px;
+
+            transition: .3s all;
+            &.active {
+                background-color: orange;
+                border: 1px solid orange;
+                color: white;
+            }
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
+    }
+
+    & > .cluster-content {
+        position: relative;
+
+        min-height: 50vh;
+        width: 100%;
+
+        background-color: white;
+        border-bottom: 1px solid orange;
+        border-top: 1px solid orange;
+        /* border-top: 0px; */
+
+        & > .header {
+            position: relative;
+
+            height: 120px;
+            width: 100%;
+
+            text-align: center;
+            line-height: 120px;
+
+            font-size: 30px;
+            color: orange;
+        }
+
+        & > .body {
+            position: relative;
+
+            height: fit-content;
+            width: 100%;
+
+            padding: 0 50px;
+            padding-bottom: 50px;
+
+            & > .header {
+                position: relative;
+
+                height: 60px;
+                width: 100%;
+
+                & > .header-label {
+                    margin-left: 50px;
+                    position: relative;
+
+                    height: 60px;
+                    width: fit-content;
+
+                    background-color: white;
+
+                    font-size: 24px;
+                    color: rgba(0, 0, 0, .6);    
+                    
+                    line-height: 60px;
+                    text-transform: uppercase;
+
+                    & > span {
+                        padding-left: 20px;
+                        padding-right: 20px;
+                    }
+                }
+
+                & > .header-line {
+                    position: absolute;
+                    left: 0;
+                    top: 50%;
+                    transform: translateY(-50%);
+    
+                    height: 2px;
+                    width: 100%;
+    
+                    background-color: orange;
+                }
+            }
+
+            & > .content {
+                position: relative;
+
+                min-height: 40vh;
+                width: 100%;
+
+                padding-top: 30px;
+
+                /* background-color: orange; */
+            }
+
+            
+        }
+    }
+}
+
+.act-card {
+    position: relative;
+
+    height: 400px;
+    width: 90%;
+
+    margin-left: auto;
+    margin-right: auto;
+    
+    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3);
+    border-radius: 5px;
+
+    overflow: hidden;
+
+    & > .header {
+        position: relative;
+
+        height: 60px;
+        width: 100%;
+
+        padding-left: 20px;
+        
+        font-size: 24px;
+        line-height: 60px;
+
+        background-color: rgba(0, 0, 0, .8);
+        color: white;
+
+        z-index: 2;
+
+        transition: .3s all;
+    }
+
+    & > .img {
+        position: absolute;
+        left: 0;
+        top: 0;
+
+        height: 100%;
+        width: 100%;
+
+        background-image: url('../../../../assets/login-bg.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+
+        z-index: 1;
+
+        transition: 1s all;
+    }
+
+    & > .brief {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+
+        height: 120px;
+        width: 100%;
+
+        background-color: rgba(0, 0, 0, .8);
+        color: white;
+
+        padding: 10px 20px;
+
+        font-size: 18px;
+
+        z-index: 2;
+
+        transition: .3s all;
+    }
+
+    &:hover {
+        & > .header {
+            opacity: .05;
+        }
+        & > .img {
+            transform: scale(1.1);
+        }
+        & > .brief {
+            opacity: .05;
+        }
+    }
 }
