--- a/src/app/components/pages/communities/communities.component.scss
+++ b/src/app/components/pages/communities/communities.component.scss
@@ -1,7 +1,9 @@
+@import '../../../theme/colors.scss';
+
 .page-header {
     position: relative;
 
-    height: 60vh;
+    height: 100vh;
     width: 100%;
 
     background-color: rgb(15, 37, 87);
@@ -13,57 +15,221 @@
 .body {
     position: relative;
 
-    min-height: 100vh;
+    min-height: 100vh; 
     width: 100%;
 
-    background-color: #E4EBF5;
+    background-color: $color-bg-light;
 }
 
-.content-navitems {
+
+
+.section {
     position: relative;
 
+    height: fit-content;
     width: 100%;
-    height: auto;
 
-    padding: 80px;
+    background-color: $color-bg-light;
 
-    & > .navitem {
+    &.t {
+        height: 100vh;
+    }
+
+    & > .section-header {
+        position: relative;
+
+        padding-left: 12%;
+        padding-right: 12%;
+
+        height: 150px;
+        width: 100%;
+
+        line-height: 150px;
+        text-align: left;
+
+        font-size: 40px;
+    }
+
+    & > .section-body {
+        position: relative;
+
+        height: fit-content;
+        width: 100%;
+    }
+
+    & > .section-brief {
+
+    }
+
+    &.s1 {
+        margin-top: 100px;
+        & > .section-header {
+            padding: 0;
+            height: 85px;
+            line-height: 85px;
+            background-color: orange;
+
+            width: 400px;
+
+            text-align: center;
+        }
+        & > .section-header-t {
+            position: absolute;
+            left: 399px;
+            top: 0;
+
+            height: 100px;
+            width: 130px;
+
+            background-color: orange;
+
+            clip-path: polygon(0 0, 0% 100%, 100% 100%);
+
+        }
+    }
+}
+
+.highlights-wrapper {
+    position: relative;
+
+    height: 600px;
+    width: 100%;
+
+    background-color: #152342;
+    border-top: 25px solid orange;
+
+    overflow: hidden;
+
+    & > .highlight-img {
         position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        
-        display: inline-block;
+        left: 0;
+        top: 0;
 
-        font-size: 24px;
+        height: 100%;
+        width: calc(100% - 500px);
+
+        & > .img {
+            height: 100%;
+            width: 100%;
+        }
+
+        &.blur {
+            filter: blur(10px);
+            
+            & > .img {
+                opacity: .3;
+            }
+        }
+    }
+
+    & > .highlight-title {
+        position: absolute;
+        bottom: 50px;
+        left: 0;
+
+        height: 100px;
+        width: 50%;
+
+        background-color: orange;
+
+        font-size: 30px;
         font-weight: bold;
+        color: white;
 
-        color:rgb(15, 37, 87);
+        line-height: 100px;
 
-        border-radius: 3px;
+        padding-left: 20px;
 
-        padding: 10px 20px;
+        clip-path: polygon(0 0, 100% 0, 85% 100%, 0% 100%);
 
-        background-color: #fff;
-        box-shadow: 0px 3px 2px 1px rgba(0, 0, 0, .2);
+        &.b {
+            bottom: 35px;
+
+            width: calc(50% + 20px);
+
+            background-color: #152342;
+
+            
+        }
 
         transition: .3s all;
         &:hover {
-            cursor: pointer;
-            box-shadow: 0px 4px 3px 2px rgba(0, 0, 0, .2);
-            top: 45%;
+            opacity: .05;
         }
+    }
 
-        &:nth-child(1) {
-            left: 25%;
-            transform: translate(-50%, -50%);
-        }
-        &:nth-child(2) {
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        &:nth-child(3) {
-            left: 75%;
-            transform: translate(-50%, -50%);
+    & > .highlight-nav {
+        position: absolute;
+        right: 40px;
+        top: 0;
+
+        height: 100%;
+        width: 460px;
+
+        /* background-color: orange; */
+
+        & .highlight-nav-item {
+            position: relative;
+
+            padding: 5px 0;
+            border-bottom: 1px solid orange;
+            
+
+            height: 162px;
+            width: 100%;
+
+            color: white;
+
+            border: 2px solid transparent;
+
+            transition: .3s all;
+            &:hover {
+                cursor: pointer;
+
+                border: 2px solid rgba(255, 166, 0, 0.747);
+            }
+
+            & > .brief {
+                position: absolute;
+                left: 0;
+                top: 0;
+
+                height: 100%;
+                width: calc(100% - 180px);
+
+                & > .bheader {
+                    height: 50px;
+                    width: 100%;
+
+                    padding-left: 10px;
+
+                    line-height: 50px;
+
+                    font-weight: bold;
+                    font-size: 20px;
+
+                    color: orange;
+                }
+
+                & > .bbody {
+                    height: calc(100% - 50px);
+                    width: 100%;
+
+                    padding: 10px;
+
+                    font-size: 15px;
+                }
+            }
+
+            & > .img {
+                position: absolute;
+                right: 0;
+                top: 0;
+
+                height: 100%;
+                width: 200px;
+            }   
+            
         }
     }
 }
