--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -1,10 +1,58 @@
 
+@import '../../../theme/colors.scss';
 
 .section {
     position: relative;
 
     height: 100vh;
     width: 100%;
+
+    & > .section-header {
+        position: relative;
+
+        width: 100%;
+        height: 150px;
+
+        font-size: 40px;
+
+        line-height: 150px;
+
+        text-align: center;
+
+        user-select: none;
+    }
+
+    & > .section-brief {
+        position: relative;
+
+        width: 100%;
+        height: fit-content;
+
+        padding-top: 50px;
+        padding-left: 12%;
+        padding-right: 12%;
+
+        line-height: 40px;
+
+        font-size: 20px;
+        letter-spacing: 2px;
+
+        text-align: center;
+    }
+
+    & > .section-body {
+        position: relative;
+
+        height: calc(100% - 150px);
+        width: 100%;
+
+        /* background-color: $color-bg-light; */
+
+        padding-left: 12%;
+        padding-right: 12%;
+
+
+    }
 
     &.s1 {
         background-color: rgb(15, 37, 87);
@@ -22,13 +70,186 @@
         }
     }
     &.s2 {
-        background-color: #E4EBF5;
+        background-color: $color-bg-light;
+
+        height: 500px;
+/* 
+        & > .section-header {
+            transform: rotateZ(2deg);
+        }
+
+        & > .section-brief {
+            transform: rotateZ(2deg);
+        } */
     }
     &.s3 {
-        background-color: #E4EBF5;
+        height: 550px;
+        background-color: orange;
+
+        color: $color-bg-light;
+        & .cluster-items {
+            position: absolute;
+            top: 40%;
+            left: 0;
+            /* left: 50%; */
+            transform: translateY(-50%);
+
+            height: fit-content;
+            width: 100%;
+        }
+
+        & .cluster-item {
+            position: relative;
+            text-align: center;
+
+            & > .cluster-icon {
+                position: relative;
+                font-size: 80px;
+
+                transition: .3s all;
+            }
+
+            & > .cluster-icon-shadow {
+                position: absolute;
+                top: 110px;
+                left: 50%;
+                transform: translateX(-50%);
+
+                height: 30px;
+                width: 90px;
+
+                opacity: 0;
+/* 
+                margin-left: auto;
+                margin-right: auto; */
+                transition: .3s all;
+                background: radial-gradient(#fff, #00000000, #00000000);
+            }
+
+            & > .cluster-label {
+                position: relative;
+
+                padding: 15px;
+
+                font-size: 18px;
+                font-weight: bold;
+
+                transition: .3s all;
+            }
+
+            & > .cluster-brief {
+                width: 200px;
+
+                margin-left: auto;
+                margin-right: auto;
+
+                text-align: center;
+            }
+            transition: .3s all;
+            &:hover {
+                & > .cluster-icon {
+                    transform: translateY(-8px);
+                }
+
+                & > .cluster-icon-shadow {
+                    width: 160px;
+                    opacity: .5;
+                }
+
+                & > .cluster-label {
+                    letter-spacing: .5px;
+                }
+            }
+        }
     }
 
     overflow: hidden;
+}
+
+.poly-0 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    height: 100px;
+    width: 100%;
+
+    filter: drop-shadow(0px -5px 10px rgba(0, 0, 0, 0.226));
+
+    & > div {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+
+        &:nth-child(1) {
+            height: 100px;
+            width: 100%;
+
+            background-color: orange;
+
+            clip-path: polygon(0 0, 0% 100%, 60% 100%);
+        }
+        &:nth-child(2) {
+            height: 60px;
+            width: 100%;
+
+            background-color: $color-bg-light;
+
+            clip-path: polygon(0 0, 0% 100%, 100% 100%);
+        }
+    }
+}
+
+.poly-1 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    height: 60px;
+    width: 100%;
+
+    background-color: orange;
+
+    /* filter: drop-shadow(0px 5px 4px rgba(0, 0, 0, 0.226)); */
+
+    & > div {
+        position: absolute;
+        top: -1px;
+        left: 0;
+
+        height: 60px;
+        width: 100%;
+
+        background-color: $color-bg-light;
+
+        clip-path: polygon(0 0, 100% 100%, 100% 0);
+
+    }
+}
+
+.poly-2 {
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+
+    height: 60px;
+    width: 100%;
+
+    filter: drop-shadow(0px -4px 6px rgba(0, 0, 0, 0.452));
+
+    & > div {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        height: 60px;
+        width: 100%;
+
+        background-color: $color-bg-light;
+
+        clip-path: polygon(0 100%, 100% 100%, 100% 0);
+
+    }
 }
 
 .s1 > .svg-view-wrapper {
@@ -318,6 +539,7 @@
             position: absolute;
             left: 50%;
             bottom: 0;
+            top: 125%;
             transform: translateX(-50%);
     
             & > span {
