--- a/src/app/components/pages/login/login.component.scss
+++ b/src/app/components/pages/login/login.component.scss
@@ -68,7 +68,7 @@
 .wrapper {
     position: relative;
 
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
 
     z-index: 2;
@@ -83,7 +83,7 @@
 
         max-width: 1240px;
 
-        height: 60vh;
+        height: 500px;
         width: 90%;
 
         /* border: 3px solid orange; */
