--- a/src/app/components/pages/user/membership/membership.component.scss
+++ b/src/app/components/pages/user/membership/membership.component.scss
@@ -1,15 +1,14 @@
 .p-col-8{
+    
     position: relative;
-
-    /* border: 2px solid #0f2557; */
-    border-radius: 30px;
+    border-radius: 5px;
     margin: auto;
-
-    box-shadow: 5px 10px 10px 5px rgba(0, 0, 0, .1);
-
     padding: 50px;
-
+    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3);
     background-color: #fff;
+    /* border: 2px solid #0f2557; */
+    /*box-shadow: 5px 10px 10px 5px rgba(0, 0, 0, .1);*/
+        
 }
 
 .title{
