--- a/src/app/components/pages/user/membership/subscription/subscription.component.scss
+++ b/src/app/components/pages/user/membership/subscription/subscription.component.scss
@@ -1,19 +1,17 @@
-.p-col-8{
+/* .p-col-8{
     position: relative;
 
-    /* border: 2px solid #0f2557; */
-    border-radius: 30px;
+    border-radius: 5px;
     margin: auto;
 
-    box-shadow: 5px 10px 10px 5px rgba(0, 0, 0, .1);
-
+    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.3);
     padding: 50px;
 
     background-color: #fff;
-}
+} */
 
 .title{
-    padding-bottom:30px;
+    padding-bottom:20px;
     
     text-align:center;
     
@@ -32,4 +30,69 @@
     padding: 50px;
 
     background-color: #E4EBF5;
+}
+
+.card {
+    position: relative;
+
+    height: fit-content;
+    width: 800px;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.3);
+    padding: 50px;
+
+    border-radius: 5px;
+
+    background-color: #fff;
+
+    & > .card-header {
+        padding-bottom: 40px;
+    
+        text-align:center;
+        
+        & > span{
+            font-size: 20px;
+            font-weight:bold;
+        }
+
+        & > .member-status {
+            & > span {
+                display: inline-block;
+
+                &:nth-child(1) {
+                    font-size: 20px;
+                    padding-right: 40px;
+                }
+                /* &:nth-child(2) {
+                    padding-right: 10px;
+                } */
+                &:nth-child(2) {
+                    font-size: 25px;
+                    color: rgba(0, 0, 0, 0.5);
+                }
+            }
+        }
+    }
+
+    & > .card-body {
+        position: relative;
+
+        height: fit-content;
+        width: 90%;
+
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+.text-0 {
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.7);
+}
+.text-1 {
+    font-size: 16px;
+    color: rgba(0, 0, 0, 1);
 }
