--- a/src/app/components/pages/user/profile/password/password.component.scss
+++ b/src/app/components/pages/user/profile/password/password.component.scss
@@ -1,20 +1,24 @@
 
 .fi-col {
     padding: 20px 0px;
-   /*  & > input {
-        
-    } */
 }
+
+.changepass {
+    float:right;  
+}
+
+//.ui-button-raised.ui-button-warning.ui-button.ui-widget.ui-state-default.ui-corner-all.ui-button-text-only
 
 .p-col-8{
     position: relative;
 
     /* border: 2px solid #0f2557; */
-    border-radius: 30px;
+    //border-radius: 30px;
     margin: auto;
 
-    box-shadow: 5px 10px 10px 5px rgba(0, 0, 0, .1);
-
+    //box-shadow: 5px 10px 10px 5px rgba(0, 0, 0, .1);
+    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3);
+    border-radius: 5px;
     padding: 50px;
 
     background-color: #fff;
@@ -36,9 +40,14 @@
 }
 
 .body{
-    padding: 50px;
     background-color: #E4EBF5;
     position: relative;
-    min-height: 100vh;
+    height: fit-content;
     width: 100%;
+
+}
+
+.text-0 {
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.7);
 }
