--- a/src/app/components/sections/footer/footer.component.scss
+++ b/src/app/components/sections/footer/footer.component.scss
@@ -126,10 +126,26 @@
             }
         }
     }
+    & > .logo{
+        position: relative;
+        display: inline-block;
+
+        padding-right: 10px;
+        
+        & > img{
+            position: relative;
+            width: 100px;
+            right:20%;
+        }
+        
+    }
+    
+    
 
     & > .contacts {
         position: absolute;
         right: 20%;
+        //top: 34px;
         bottom: 50px;
         transform: translateX(-50%);
 
@@ -163,7 +179,9 @@
             }
             
         }
+       
     }
+
 }
 
 .others {
