--- a/src/app/components/sections/page-header/page-header.component.scss
+++ b/src/app/components/sections/page-header/page-header.component.scss
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%; // 60px for breadcrumb
 
-
+    user-select: none;
     & > .transition {
         position: absolute;
         bottom: 0;
@@ -25,7 +25,7 @@
 
             &:nth-child(1) {
                 height: 90%;
-                background-color: $color-side;
+                background-color: orange;
                 clip-path: polygon(50% 40%, 100% 0, 100% 100%, 0 100%, 0 0);
             }
             &:nth-child(2) {
