--- a/src/app/components/shared/news/post/post.component.scss
+++ b/src/app/components/shared/news/post/post.component.scss
@@ -17,12 +17,12 @@
     /* border: 1px solid rgba(0, 0, 0, 0.2); */
     border-radius: 3px;
 
-    box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, .3);
+    box-shadow: 0px 4px 5px 1px rgba(0, 0, 0, .3);
 
-    transition: .3s all;
+    /* transition: .3s all;
     &:hover {
         border: 1px solid rgba(0, 0, 0, 0.4);
-    }
+    } */
 
     & > .header {
         position: relative;
@@ -32,7 +32,8 @@
 
         padding: 20px 30px;
 
-        color: rgb(15, 37, 87);
+        background-color: rgba(255, 166, 0, 0.2);
+        /* color: white; */
         text-transform: uppercase;
         font-size: 24px;
 
@@ -81,20 +82,70 @@
             position: relative;
 
             height: 300px;
-            width: 400px;
+            width: 100%;
 
             padding: 10px;
 
+            overflow: hidden;
+            border: 1px dashed orange;
 
-            border: 1px dashed rgba(0, 0, 0, 0.1);
+            text-align: center;
 
-            & > #img {
+            font-size: 20px;
+
+            background-color: orange;
+
+            &:hover {
+                & > .drop-label {
+                    opacity: 1;
+                }
+            }
+
+            & > .drop-label {
+                position: absolute;
+                top: 50%;
+                left: 0;
+                transform: translateY(-50%);
+
+                height: fit-content;
+                width: 100%;
+
+                text-align: center;
+
+                opacity: .5;
+
+                color: orange;
+
+                transition: .3s all;
+                & > i {
+                    
+                    display: block;
+                    font-size: 30px;
+                }
+
+                & > span {
+                    display: block;
+                    padding: 10px 0;
+                }
+            }
+
+            & > .img {
                 position: relative;
 
                 height: 100%;
                 width: 100%;
 
-                background-color: rgb(246, 247, 221);
+                /* background-color: rgb(246, 247, 221); */
+
+                &.blur {
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+
+                    filter: blur(2px);
+
+                    opacity: .7;
+                }
             }
         }
 
@@ -107,12 +158,21 @@
     }
 
     & >.news-action {
-        position: absolute;
-        top: 0;
-        right: 50px;
-    
+        position: relative;
+
         height: 50px;
-        width: auto;
+        width: 100%;
+
+        text-align: center;
+    }
+}
+
+.image-upload-container {
+    text-align: center;
+
+    & > input {
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
@@ -137,5 +197,54 @@ hr {
 :host ::ng-deep .btn-cancel {
     & > .ui-button-secondary {
         margin-right: 20px;
+    }
+}
+
+.button-wrapper {
+    position: relative;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .button-wrapper span.label {
+    position: relative;
+    z-index: 0;
+    display: inline-block;
+    width: 100%;
+    background: orange;
+    cursor: pointer;
+    color: #fff;
+    padding: 10px 0;
+    text-transform:uppercase;
+    font-size:12px;
+  }
+  
+  #upload {
+      display: inline-block;
+      position: absolute;
+      z-index: 1;
+      width: 100%;
+      height: 50px;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      cursor: pointer;
+  }
+
+.btn-post {
+    width: 100%;
+    text-align: center;
+
+    padding-bottom: 30px;
+    & > span {
+        padding: 10px 40px;
+    
+        background-color: orange;
+    
+        color: white;
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
