--- a/src/app/imports/scss/accordion.scss
+++ b/src/app/imports/scss/accordion.scss
@@ -14,7 +14,7 @@
   user-select: none;   
 }
 
-$toggle-background: rgb(14, 30, 66);
+$toggle-background: #223663;
 $toggle-background-active: lighten($toggle-background, 8);
 .accordion {
   color: #FFF; 
@@ -29,7 +29,7 @@ $toggle-background-active: lighten($toggle-background, 8);
           &:before {
             content: " ";
             position: absolute;
-            border-left: 3px solid #21CCFC; 
+            border-left: 3px solid #223663; 
             height: 100%;
             left: 0;
           }
@@ -96,10 +96,13 @@ body {
   background: rgb(9, 20, 46);
   /* background: #022160; */
   width: 250px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
+  height: 100%;
+
   position: fixed;
+  top: 0;
+  left: 0;
+  
+  transition: .3s all
 }
 .accordion {
   font-size: 14px;
@@ -132,20 +135,39 @@ ul {
     &:hover {
       cursor: pointer;
       i {
-        color: #21CCFC;  
+        color: #223663;  
       }
     }
   }
 }
 .logo {
+  position: relative;
+
   width: 100%;
   height: 250px;
   text-align: center;
   color: #FFF;
   font-size: 20px;
   line-height: 250px;
-  i {
-    font-size: 70px;
-    color: #21CCFC;
+  
+  & > .myras-logo {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+    height: 150px;
+    width: 200px;
+
+    background-image: url('../assets/myras-logo.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  .left-menu {
+    left: -250px;
   }
 }
